force-app/main/default/objects/Contact/fields/Account_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Address__c</fullName>
    <formula>Account.ShippingStreet + &apos; &apos; + Account.ShippingCity + &apos; &apos; + Account.ShippingState + &apos;, &apos; + Account.ShippingPostalCode + &apos; &apos; + Account.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Address</label>
    <type>Text</type>
</CustomField>