force-app/main/default/objects/Contact/fields/Account_Data_Loader_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Account_Data_Loader_Identifier__c</fullName>
    <label>Account Data Loader Identifier</label>
    <length>30</length>
    <type>Text</type>
</CustomField>