force-app/main/default/objects/Contact/fields/Account_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Name__c</fullName>
    <formula>Account.Owner.Person_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Name</label>
    <type>Text</type>
</CustomField>