force-app/main/default/objects/Contact/fields/Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type__c</fullName>
    <description>Record Type of Linked Account. Used for Contact View.</description>
    <formula>TEXT(Account.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Record Type</label>
    <type>Text</type>
</CustomField>