force-app/main/default/objects/Contact/fields/Act_On_Behavior_Score__c.field-meta.xml
<CustomField>
    <fullName>Act_On_Behavior_Score__c</fullName>
    <label>Act-On Behavior Score</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>