force-app/main/default/objects/Contact/fields/Address2__c.field-meta.xml
<CustomField>
    <fullName>Address2__c</fullName>
    <label>Address 2</label>
    <length>60</length>
    <type>Text</type>
</CustomField>