force-app/main/default/objects/Contact/fields/Address_1__c.field-meta.xml
<CustomField>
    <fullName>Address_1__c</fullName>
    <label>Address 1</label>
    <length>60</length>
    <type>Text</type>
</CustomField>