force-app/main/default/objects/Contact/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>IF( ISBLANK( Locations__c ) , ( Account.ShippingStreet   + &apos; , &apos; +  Account.ShippingCity   + &apos; , &apos; +  Account.ShippingState   + &apos; , &apos; +  Account.ShippingCountry   + &apos; , &apos; + Account.ShippingPostalCode ),

(Locations__r.Address__Street__s  + &apos; , &apos; + Locations__r.Address__City__s +  &apos; , &apos; +   TEXT ( Locations__r.Address__StateCode__s ) + &apos; , &apos; + TEXT( Locations__r.Address__CountryCode__s )  +  &apos; , &apos; +  Locations__r.Address__PostalCode__s) )</formula>
    <label>Contact Address</label>
    <type>Text</type>
</CustomField>