force-app/main/default/objects/Contact/fields/Beacon_Contact_Count__c.field-meta.xml
<CustomField>
    <fullName>Beacon_Contact_Count__c</fullName>
    <description>Count of Beacon Contacts</description>
    <label>Beacon Contact Count</label>
    <summaryFilterItems>
        <field>Beacon_Contact__c.Department__c</field>
        <operation>notEqual</operation>
        <value>Expired</value>
    </summaryFilterItems>
    <summaryForeignKey>Beacon_Contact__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>