force-app/main/default/objects/Contact/fields/Buying_Role__c.field-meta.xml
<CustomField>
    <fullName>Buying_Role__c</fullName>
    <label>Buying Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adversary</fullName>
            </value>
            <value>
                <fullName>Advocate</fullName>
            </value>
            <value>
                <fullName>Champion</fullName>
            </value>
            <value>
                <fullName>Critic</fullName>
            </value>
            <value>
                <fullName>Indifferent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>