force-app/main/default/objects/Contact/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <formula>IF( ISBLANK( Locations__c ) ,   Account.ShippingCity   , Locations__r.Address__City__s)</formula>
    <label>Contact City</label>
    <type>Text</type>
</CustomField>