force-app/main/default/objects/Contact/fields/Contact_Definition__c.field-meta.xml
<CustomField>
    <fullName>Contact_Definition__c</fullName>
    <label>Contact Definition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary customer relationship</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Who you go to when requesting a purchase order.</fullName>
            </value>
            <value>
                <fullName>Scheduling, printed on route sheet</fullName>
            </value>
            <value>
                <fullName>Contact will receive invoices and name will print on the first line of the billing address.</fullName>
            </value>
            <value>
                <fullName>Collections, who we call to collect money.</fullName>
            </value>
            <value>
                <fullName>Receives copies of the return manifest. Contact will print on the first line of the manifest. Manifest contacts must have a manifest address.</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
            <value>
                <fullName>Purchasing</fullName>
            </value>
            <value>
                <fullName>Cust Service</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>DEA</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Health/Safety</fullName>
            </value>
            <value>
                <fullName>Industrial Services</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Tracking</fullName>
            </value>
            <value>
                <fullName>Emergency Response</fullName>
            </value>
            <value>
                <fullName>This contact name will print on the Generator’s Certificate of Disposal</fullName>
            </value>
            <value>
                <fullName>Remediation</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>