force-app/main/default/objects/Contact/fields/Contact_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Full_Name__c</fullName>
    <description>Contact First and Last Name</description>
    <formula>FirstName + &quot; &quot; +  LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Full Name</label>
    <type>Text</type>
</CustomField>