force-app/main/default/objects/Contact/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <label>Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Contacted</fullName>
            </value>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Strategic Partner</fullName>
            </value>
            <value>
                <fullName>NLWC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>