force-app/main/default/objects/Contact/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <inlineHelpText>Main=Main Contact (required)
PO=PO Requester
AP=Collections 
MANI=Manifest
SALE-Sales
SCHD=Scheduling
ACCT=Invoicing</inlineHelpText>
    <label>Contact Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MAIN</fullName>
            </value>
            <value>
                <fullName>PO</fullName>
            </value>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>MANI</fullName>
            </value>
            <value>
                <fullName>ACCT</fullName>
            </value>
            <value>
                <fullName>SCHD</fullName>
            </value>
            <value>
                <fullName>SALE</fullName>
            </value>
            <value>
                <fullName>CERT</fullName>
            </value>
            <value>
                <fullName>COMP</fullName>
            </value>
            <value>
                <fullName>CORP</fullName>
            </value>
            <value>
                <fullName>CUST</fullName>
            </value>
            <value>
                <fullName>DEA</fullName>
            </value>
            <value>
                <fullName>ENG</fullName>
            </value>
            <value>
                <fullName>ENV</fullName>
            </value>
            <value>
                <fullName>ER</fullName>
            </value>
            <value>
                <fullName>HEAL</fullName>
            </value>
            <value>
                <fullName>HIS</fullName>
            </value>
            <value>
                <fullName>PURC</fullName>
            </value>
            <value>
                <fullName>REM</fullName>
            </value>
            <value>
                <fullName>SHIP</fullName>
            </value>
            <value>
                <fullName>TECH</fullName>
            </value>
            <value>
                <fullName>TRAK</fullName>
            </value>
			<value>
                <fullName>PLNT</fullName>
            </value>
            <value>
                <fullName>MAIT</fullName>
            </value>
            <value>
                <fullName>OPS</fullName>
            </value>
            <value>
                <fullName>TURN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>