force-app/main/default/objects/Contact/fields/Contact_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type_Description__c</fullName>
    <formula>hyperlink(&quot;https://cleanharbors--chfull--c.cs13.content.force.com/servlet/servlet.FileDownload?file=015W0000000HgGQ&quot;,&quot;Click to view Contact Type Descriptions&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Type Description</label>
    <type>Text</type>
</CustomField>