force-app/main/default/objects/Contact/fields/Corp_Key_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Corp_Key_Account_Name__c</fullName>
    <formula>Account.Key_Account_Name__c</formula>
    <label>Corp/Key Account Name</label>
    <type>Text</type>
</CustomField>