force-app/main/default/objects/Contact/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <formula>TEXT(Locations__r.Address__CountryCode__s)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Country</label>
    <type>Text</type>
</CustomField>