force-app/main/default/objects/Contact/fields/CS_Ecomm__c.field-meta.xml
<CustomField>
    <fullName>CS_Ecomm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CHOS Access</label>
    <type>Checkbox</type>
</CustomField>