force-app/main/default/objects/Contact/fields/Days_Since_Last_MAIN_Verification__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_MAIN_Verification__c</fullName>
    <formula>Account.Days_Since_Main_Contact_Verified__c</formula>
    <label>Days Since Last MAIN Verification</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>