force-app/main/default/objects/Contact/fields/ddm__OptInType__c.field-meta.xml
<CustomField>
    <fullName>ddm__OptInType__c</fullName>
    <description>Opt In Type shows you how a contact opted into your campaigns</description>
    <inlineHelpText>Opt In Type shows you how a contact opted into your campaigns</inlineHelpText>
    <label>Opt In Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>