force-app/main/default/objects/Contact/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department_Code__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Cert of Disposal</fullName>
            </value>
            <value>
                <fullName>Collections Contact</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Corp Contact</fullName>
            </value>
            <value>
                <fullName>Cust Service</fullName>
            </value>
            <value>
                <fullName>Emergency Response</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Health/Safety</fullName>
            </value>
            <value>
                <fullName>Industrial Services</fullName>
            </value>
            <value>
                <fullName>Invoicing Contact</fullName>
            </value>
            <value>
                <fullName>Main Contact</fullName>
            </value>
            <value>
                <fullName>Manifest Copy</fullName>
            </value>
            <value>
                <fullName>Purchasing</fullName>
            </value>
            <value>
                <fullName>Remediation</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Scheduling</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Tracking</fullName>
            </value>
            <value>
                <fullName>AP Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>