force-app/main/default/objects/Contact/fields/Email_Entered__c.field-meta.xml
<CustomField>
    <fullName>Email_Entered__c</fullName>
    <formula>if (lower(Email) = &apos;refused@email.com&apos;, &apos;Refused&apos;,
if (lower(Email) = &apos;pending@email.com&apos;, &apos;Pending&apos;,
   if (isblank(Email), &apos;Blank&apos;
  ,&apos;Entered&apos;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Entered</label>
    <type>Text</type>
</CustomField>