force-app/main/default/objects/Contact/fields/Email_Entered_Beacon__c.field-meta.xml
<CustomField>
    <fullName>Email_Entered_Beacon__c</fullName>
    <formula>if (isblank(Email), &apos;Blank&apos;, 
if (CONTAINS(Lower(Email),&quot;refurb&quot;), &apos;Entered&apos;, 
if (CONTAINS(Lower(Email),&quot;refuel&quot;), &apos;Entered&apos;, 
if (CONTAINS(Lower(Email),&quot;cleansweeprefuse&quot;), &apos;Entered&apos;, 
if (CONTAINS(Lower(Email),&quot;southtahoerefuse&quot;), &apos;Entered&apos;, 
if (CONTAINS(Lower(Email),&quot;cesrefuse&quot;), &apos;Entered&apos;, 
if (CONTAINS(Lower(Email),&quot;non@gmail.com&quot;), &apos;Refused&apos;, 
if ( CONTAINS(Lower(Email),&quot;noemail&quot;), &apos;Refused&apos;, 
if ( CONTAINS(Lower(Email),&quot;noemailavailable&quot;), &apos;Refused&apos;, 
if ( CONTAINS(Lower(Email),&quot;none@email.com&quot;), &apos;Refused&apos;, 
if ( CONTAINS(Lower(Email),&quot;none@gamil.com&quot;), &apos;Refused&apos;, 
if ( CONTAINS(Lower(Email),&quot;none@given.com&quot;), &apos;Refused&apos;, 
if ( CONTAINS(Lower(Email),&quot;none@mengauto.com&quot;), &apos;Refused&apos;, 
if ( CONTAINS(Lower(Email),&quot;none@none.com&quot;), &apos;Refused&apos;, 
if ( CONTAINS(Lower(Email),&quot;none@pelayo.com&quot;), &apos;Refused&apos;, 
if ( CONTAINS(Lower(Email),&quot;none@yahoo.com&quot;), &apos;Refused&apos;, 
if ( CONTAINS(Lower(Email),&quot;none@ch.com&quot;), &apos;Refused&apos;, 
if ( CONTAINS(Lower(Email),&quot;noreply&quot;), &apos;Refused&apos;, 
if ( CONTAINS(Lower(Email),&quot;notavailable&quot;), &apos;Refused&apos;, 
if ( CONTAINS(Lower(Email),&quot;notemail&quot;), &apos;Refused&apos;, 
if ( CONTAINS(Lower(Email),&quot;notgiven&quot;), &apos;Refused&apos;, 
if ( CONTAINS(Lower(Email),&quot;notprovided&quot;), &apos;Refused&apos;, 
if ( CONTAINS(Lower(Email),&quot;novalidemail&quot;), &apos;Refused&apos;, 
if ( CONTAINS(Lower(Email),&quot;refu&quot;), &apos;Refused&apos;, 
if ( CONTAINS(Lower(Email),&quot;pending&quot;), &apos;Pending&apos;, 
&apos;Entered&apos; 
)))))))) 
)))))))))) 
)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Entered</label>
    <type>Text</type>
</CustomField>