force-app/main/default/objects/Contact/fields/email_indcr__c.field-meta.xml
<CustomField>
    <fullName>email_indcr__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Subscribe Email</label>
    <type>Checkbox</type>
</CustomField>