force-app/main/default/objects/Contact/fields/Email_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_Owner_ID__c</fullName>
    <label>Email Owner ID</label>
    <type>TextArea</type>
</CustomField>