force-app/main/default/objects/Contact/fields/Email_Text_DID__c.field-meta.xml
<CustomField>
    <fullName>Email_Text_DID__c</fullName>
    <label>Email Type DID</label>
    <type>TextArea</type>
</CustomField>