force-app/main/default/objects/Contact/fields/Expired__c.field-meta.xml
<CustomField>
    <fullName>Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to Expire the contact</description>
    <inlineHelpText>Checking expired will expire the entire contact. If you want to remove a type please use the contact type field</inlineHelpText>
    <label>Expired</label>
    <type>Checkbox</type>
</CustomField>