force-app/main/default/objects/Contact/fields/Individual_ID__c.field-meta.xml
<CustomField>
    <fullName>Individual_ID__c</fullName>
    <label>Individual ID</label>
    <type>TextArea</type>
</CustomField>