force-app/main/default/objects/Contact/fields/Invalid_Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Main_Contact__c</fullName>
    <formula>If( 
And( 
Account.Expired__c = false, 
or( 
CONTAINS( Contact_Full_Name__c , &quot;Main&quot;), 
CONTAINS(Contact_Full_Name__c , &quot;Contact&quot;), 
CONTAINS(Contact_Full_Name__c , &quot;None&quot;), 
CONTAINS(Contact_Full_Name__c , &quot;Not&quot;), 
ISBLANK( Phone ), 
Phone = &apos;111111111&apos;, 
Phone = &apos;2222222222&apos;, 
Phone = &apos;3333333333&apos;, 
Phone = &apos;4444444444&apos;, 
Phone = &apos;5555555555&apos;, 
Phone = &apos;6666666666&apos;, 
Phone = &apos;7777777777&apos;, 
Phone = &apos;8888888888&apos;, 
Phone = &apos;9999999999&apos;, 
CONTAINS(Phone, &quot;123456789&quot;), 
ISBLANK( Email ), 
CONTAINS(Email, &quot;refus&quot;), 
CONTAINS(Email, &quot;pendin&quot;), 
CONTAINS(Email, &quot;none&quot;), 
CONTAINS(Email, &quot;noemail&quot;), 
CONTAINS(Email, &quot;didntask&quot;), 
CONTAINS(Email, &quot;dontknow&quot;) 
) 
), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invalid Main Contact</label>
    <type>Checkbox</type>
</CustomField>