force-app/main/default/objects/Contact/fields/Length_Check__c.field-meta.xml
<CustomField>
    <fullName>Length_Check__c</fullName>
    <formula>LEN(Title)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Length Check</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>