force-app/main/default/objects/Contact/fields/Locations__c.field-meta.xml
<CustomField>
    <fullName>Locations__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Locations</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Customer Contacts</relationshipLabel>
    <relationshipName>Customer_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>