force-app/main/default/objects/Contact/fields/Master_Contact_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Master_Contact_ID_18__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Contact ID (18)</label>
    <type>Text</type>
</CustomField>