force-app/main/default/objects/Contact/fields/Org_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Org_Contact_Type__c</fullName>
    <label>Recruiting Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Career Services</fullName>
            </value>
            <value>
                <fullName>Dean</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Program Manager</fullName>
            </value>
            <value>
                <fullName>Trainer</fullName>
            </value>
            <value>
                <fullName>College Career Counselor</fullName>
                <isActive>false</isActive>
                <label>College Career Counselor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>