force-app/main/default/objects/Contact/fields/Organization_Category__c.field-meta.xml
<CustomField>
    <fullName>Organization_Category__c</fullName>
    <formula>TEXT( Account.Organization_Category__c )</formula>
    <label>Organization Category</label>
    <type>Text</type>
</CustomField>